--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'  # Eliminé el caret (^) para mejor práctica
+  sdk: '>=3.0.0 <4.0.0'  
 
 dependencies:
   flutter:
@@ -13,7 +13,9 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
-  cupertino_icons: ^1.0.8  # Movido a mismo nivel que otras dependencias
+  cupertino_icons: ^1.0.8  
+  flutter_flow_chart: ^3.2.3
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -24,4 +26,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - assets/data/module1.json  # Movido aquí dentro del bloque flutter
+    - assets/data/module1.json  
