--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   fluttertoast: ^8.2.2
   flutter_highlighter: ^0.1.1
   flutter_launcher_icons: ^0.14.3
+  flutter_svg: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,7 @@ flutter:
     - assets/data/module4/tema4.json
     - assets/data/module4/actividades.json
     - assets/animations/loading.json
+    - assets/module2photos/
 
 flutter_icons:
   android: true  # Ícono adaptativo para Android
